v1/infra/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zypto
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform
