v1/infra/k8s/monitoring.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prometheus
  namespace: platform
spec:
  containers:
    - name: prometheus
      image: prom/prometheus
